--- a/file_splitter/chunky/static/css/chunkpg.css
+++ b/file_splitter/chunky/static/css/chunkpg.css
@@ -277,6 +277,11 @@ input[type='radio']:checked:after {
     width:80%;
 }
 
+.submit input{
+    background-color: #782c00;
+    font-size: 16px;
+    font-family: 'Baskervville',sans-serif;
+}
 .links a{
     text-align: center;
     background: #782c00;
@@ -295,7 +300,6 @@ input[type='radio']:checked:after {
     bottom: 0;
     margin-bottom: 0;
     padding-top: 10px;
-    right: 0;
     z-index: -2;
     position: fixed;
     font-size: 12px;
