--- a/dashboard.css
+++ b/dashboard.css
@@ -68,6 +68,12 @@ body{
 .nav-links ul li a{
     text-decoration: none;
     color: white;
+    cursor: pointer;
+    padding-bottom: 5px;
+}
+
+.nav-links ul li a:hover{
+    border-bottom: 2px solid white;
 }
 
 .nav-links {
@@ -88,10 +94,12 @@ body{
     width: 20px;
 }
 
-#icon{
-    width: 25px;
-    border-left: 2px solid white;
-    padding-left: 5px;
+#home{
+    border-bottom: 2px solid white;
+}
+
+/*download icon*/#dicon{
+    margin-right: 6px;
 }
 
 /*menu bar*/
@@ -158,6 +166,7 @@ body{
 a{
     text-decoration:none;
     color:black;
+    cursor: pointer;
 }
 
 #a{
@@ -258,7 +267,13 @@ a{
     }
     .nav-links{
         margin-left:5%;
-      }
+    }
+    .img img{
+       margin-bottom: 20px;
+   }
+   .img{
+       padding-top: 15px;
+   }
 }
 
 @media(max-width:660px){
@@ -279,6 +294,7 @@ a{
        line-height: 10px;
        padding-top: 5px;
    }
+   
 }
 
 
@@ -309,4 +325,21 @@ a{
      .img{
          height: 60px;
          }
+}
+
+@media(min-width:1100px){
+    .icon{
+        width:27px;
+        top: 1px;
+        position: absolute;
+    }
+    .nav-links ul li a{
+        font-size: 20px;
+        margin-top: 0px;
+        margin-left: 40px;
+    }
+    .nav-links ul li{
+        position: relative;
+        width: 100%;
+    }
 }
