--- a/forget.css
+++ b/forget.css
@@ -98,48 +98,6 @@ body{
     right:10px;
 }
 
-/* footer section */
-footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-    background-color: #E4D5CC;
-}
-.footer{
-    display: flex;
-    padding:0px 10px ;
-    justify-content: space-around;
-    margin-top: 10px;
-    align-items: center;
-}
-
-.copyright{
-    font-size: 10px;
-    margin-right: 0px;
-}
-
-.footer ul{
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    line-height: 15px;
-    width: 100%;
-}
-
-.footer ul li a{
-    text-decoration: none;
-    color: black;
-    font-size: 14px;
-}
-
-.footer ul li a:hover{
-    cursor: pointer;
-}
-
 /* content section */
 h2{
     margin:180px 0px 80px 0px;
@@ -214,6 +172,52 @@ input{
     cursor: pointer;
     color:#782c00 ;
 }
+
+/* footer section */
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 65px;
+    position: fixed;
+    bottom: 0px;
+    background-color: #E4D5CC;
+}
+.footer{
+    display: flex;
+    padding:0px 10px ;
+    justify-content: space-around;
+    width: 100%;
+    position: relative;
+}
+
+.copyright{
+    font-size: 11px;
+    position: absolute;
+    right: 10px;
+    bottom: 0px;
+}
+
+.footer ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    line-height: 15px;
+    width: 100%;
+}
+
+.footer ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+}
+
+.footer ul li a:hover{
+    cursor: pointer;
+}
+
 
 @media(max-width:550px) {
     .content2{padding: 30px;} 
