--- a/signup.css
+++ b/signup.css
@@ -156,6 +156,7 @@ input::placeholder{
     text-decoration: none;
     color:#782c00;
     padding: 5px;
+    font-weight: bold;
 }
 
 #alt a:hover{
