--- a/landingpg.css
+++ b/landingpg.css
@@ -163,12 +163,13 @@ body{
 /*file icons for Json and Csv*/
 .file{
     width: 90%;
-    height: 50px;
+    height: 140px;
     margin: auto;
     display: flex;
     justify-content: space-around;
     margin-bottom: 40px;
     font-size: 14px;
+    overflow-y: hidden;
 }
 .file img{
     width: 50px;
@@ -188,15 +189,17 @@ body{
     width: 90%;
     height: 50%;
     margin:40px auto;
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
+    background-image: url('images/image1.jpeg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .img img{
     width: 100%;
     height: 100vh;
     margin: 50px 0px;
     object-fit: fit;
+    
 }
 
 /*information about the website .info*/
@@ -221,11 +224,7 @@ body{
 .jsoninfo p, .csvinfo p {padding-bottom: 30px;}
 
 span h3{
-    margin-top: 100px;
     margin-left: 5%;
-}
-span > h4{
-    margin-bottom: 30px;
 }
 
 .button{
@@ -253,11 +252,50 @@ span > h4{
     border-radius: 8px ;
     color: black;
 }
-.footer1{
-display: flex;
- justify-content: space-between;   
+
+/* footer section */
+footer{
+    display: flex;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 30px;
+    height: 70px;
+    bottom: 0px;
+    position: relative;
+    background-color: #E4D5CC;
+}
+.footer{
+    display: flex;
+    padding:0px 10px ;
+    justify-content: space-around;
+    width: 80%;
 }
 
+.copyright{
+    font-size: 11px;
+    position: absolute;
+    right: 10px;
+    bottom: 0px;
+}
+
+.footer ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    line-height: 10px;
+    width: 100%;
+}
+
+.footer ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+}
+
+.footer ul li a:hover{
+    cursor: pointer;
+}
 
 
 
