--- a/landingpg.css
+++ b/landingpg.css
@@ -202,6 +202,16 @@ body{
     
 }
 
+#img2 {
+    width: 90%;
+    height: 50%;
+    margin:40px auto;
+    background-image: url('images/image2.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 /*information about the website .info*/
 .info{
     display: flex;
